# etc-os-release

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  release.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/: construct.rs  entry.rs  fields.rs  lib.rs
xtask/: Cargo.toml  README.md
