[workspace]
members = ["xtask"]

[package]
name = "etc-os-release"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"
description = "Parse /etc/os-release file"
readme = "README.md"
repository = "https://github.com/gifnksm/etc-os-release"
license = "MIT OR Apache-2.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
maintenance = true
license = { link = "#license" }
crates-io = true
docs-rs = true
rust-version = true
github-actions = { workflows = "ci.yml" }
codecov = true

[features]
default = []
date = ["dep:chrono"]
url = ["dep:url"]

[dependencies]
chrono = { version = "0.4.38", default-features = false, optional = true }
indexmap = "2.0.2"
thiserror = "1.0.61"
url = { version = "2.4.1", default-features = false, optional = true }

[dev-dependencies]
[build-dependencies]

[profile.dev]

[profile.release]

[badges]
maintenance = { status = "passively-maintained" }
